<resources>
    <string name="app_name">TermTem</string>
    <string name="platform">android</string>
    <string name="server">https://dev.wwwealth.co/wealthservice/</string>
    <string name="contact_phone_no">098-247-4555</string>
    <string name="kbank_branch">สุขุมวิท 101</string>
    <string name="bbl_branch">ม.เทคโนโลยีราชมงคลกรุงเทพ</string>
    <string name="bank_account_type">ออมทรัพย์</string>
    <string name="bank_account_name">บริษัท เวิลด์ ไวด์ เวลธ์ โฮลดิ้ง จำกัด</string>
    <string name="kbank_saving_account_number">019-8-36814-8</string>
    <string name="bbl_saving_account_number">902-7-11486-8</string>
    <string name="bbl_promptpay_account_number">0-1055-59135-27-4</string>
    <string name="facebook_url">https://www.facebook.com/367718776940311</string>
    <string name="facebook_page_id">367718776940311</string>
    <string name="content_version">เวอร์ชั่น :</string>
    <string name="app_name_th">เติมเต็ม</string>
    <string name="main_menu">เมนูหลัก</string>
    <string name="in_box">กล่องข้อความ</string>
    <string name="saving_account">บัญชีออมทรัพย์ :</string>
    <string name="promptpay_account">บัญชีพร้อมเพย์ :</string>
    <string name="promptpay_title">พร้อมเพย์ :</string>
    <string name="please_enter_data">กรุณากรอกข้อมูลให้ครบถ้วน</string>
    <string name="please_set_name">กรุณากรอกชื่อที่ท่านต้องการตั้ง</string>
    <string name="name">ชื่อ</string>
    <string name="processing">รอดำเนินการ...</string>
    <string name="phone_number">หมายเลขโทรศัพท์</string>
    <string name="phone_number_agent_adviser">หมายเลขโทรศัพท์ Agent ผู้แนะนำ (ถ้ามี)</string>
    <string name="hint_phone_number">กรอกหมายเลขโทรศัพท์</string>
    <string name="identity_number">หมายเลขบัตรประจำตัวประชาชน</string>
    <string name="next">ถัดไป</string>
    <string name="send">ส่ง</string>
    <string name="hint_birthday">วัน/เดือน/ปี เกิด</string>
    <string name="year_old_wrong">อายุของท่านต่ำกว่าเกณฑ์ที่กำหนด (20 ปี)</string>
    <string name="email">อีเมล (ถ้ามี)</string>
    <string name="password">รหัสผ่าน</string>
    <string name="forgot_password">ลืมรหัสผ่าน?</string>
    <string name="change_password">เปลี่ยนรหัสผ่าน</string>
    <string name="password_again">ยืนยันรหัสผ่าน</string>
    <string name="done">เสร็จสิ้น</string>
    <string name="register_done">&#9679;\t บริษัทได้รับคำขอสมัครใช้บริการเรียบร้อยแล้ว
        \n\n&#9679;\t รอรับ “รหัสผู้ใช้งาน” และ “รหัสผ่าน” เมื่อได้รับการอนุมัติจากบริษัท
        \n\n&#9679;\t สอบถามเพิ่มเติม ติดต่อ 02-331-4788</string>
    <string name="thank_register_done">ขอบคุณท่านที่ให้ความสนใจบริการเติมเต็ม</string>
    <string name="register_device_done">ลงทะเบียนเสร็จสิ้น ทางบริษัทจะติดต่อกลับโดยเร็วที่สุด</string>
    <string name="back_to_login">กลับหน้าเข้าสู่ระบบ</string>
    <string name="back_to_main">กลับสู่เมนูหลัก</string>
    <string name="balance">ยอดเงิน</string>
    <string name="balance_toup_preview">บัญชีคงเหลือ (บาท) :</string>
    <string name="markup">ค่าดำเนินการ (บาท) :</string>
    <string name="home">หน้าหลัก</string>
    <string name="help">ช่วยเหลือ</string>
    <string name="report">รายงาน</string>
    <string name="report_history">ประวัติรายการ</string>
    <string name="dashboard_other">อื่น ๆ</string>
    <string name="setting">ตั้งค่าโปรแกรม</string>
    <string name="transfer">แล้เปลี่ยนเงิน</string>
    <string name="topup_online">Topup Online</string>
    <string name="topup_pin">Topup Pin</string>
    <string name="notification">แจ้งเตือน</string>
    <string name="title_dashboard">Credit Limit</string>
    <string name="credit_balance">ยอดเครดิตคงเหลือ</string>
    <string name="topup">เติมเงินมือถือ</string>
    <string name="vas">ขายแพ็กเกจเสริม</string>
    <string name="confirm_order">ยืนยันทำรายการ</string>
    <string name="bank_account">บัญชีธนาคาร</string>
    <string name="credit_debit_card">บัตรเครดิต/เดบิต</string>
    <string name="noti_payment">แจ้งชำระเงิน</string>
    <string name="scb">ธนาคารไทยพาณิชย์</string>
    <string name="tmb">ธนาคารทหารไทย</string>
    <string name="gsb">ธนาคารออมสิน</string>
    <string name="kbank">กสิกรไทย</string>
    <string name="bbl">กรุงเทพ</string>
    <string name="ppay">พร้อมเพย์</string>
    <string name="ktb">ธนาคารกรุงไทย</string>
    <string name="tnch">ธนาคารธนชาต</string>
    <string name="exchange_rate">อัตราแลกเปลี่ยน</string>
    <string name="select_currency">เลือกสกุลเงิน</string>
    <string name="us">US</string>
    <string name="enter_reference">ใส่หมายเลขอ้างอิง</string>
    <string name="reference">หมายเลขอ้างอิง :</string>
    <string name="confirm">ยืนยัน</string>
    <string name="skip">ข้าม</string>
    <string name="edit">แก้ไข</string>
    <string name="cancel">ยกเลิก</string>
    <string name="recipient">Recipient :</string>
    <string name="mid_market_rate">Mid-Market rate :</string>
    <string name="withdrawal_fees">Withdrawal Fees :</string>
    <string name="total_withdrawal_fees">Total Withdrawal Fees :</string>
    <string name="payment">ชำระเงิน</string>
    <string name="recipient_sets">Recipient sets :</string>
    <string name="commission">Commission (บาท) :</string>
    <string name="total">ยอดที่ชำระ (บาท) :</string>
    <string name="all_total">รวมยอดเติม (บาท) :</string>
    <string name="total_coin">Total Coin :</string>
    <string name="btn_transfer">TRANSFER</string>
    <string name="title_mt">Money Transfer</string>
    <string name="balance_transfer">ยอดเงินที่โอน :</string>
    <string name="currency">บาท</string>
    <string name="currency_hint">" "(บาท) :</string>
    <string name="date_transfer">วันที่โอน :</string>
    <string name="time_cashin">เวลาที่โอน :</string>
    <string name="evidance">หลักฐาน :</string>
    <string name="bank_start">ธนาคารต้นทาง :</string>
    <string name="bank_end">ธนาคารปลายทาง :</string>
    <string name="browse_file">เลือกรูป</string>
    <string name="change_image">เปลี่ยนรูป</string>
    <string name="delete_image">ลบรูป</string>
    <string name="wait_pay">รอการชำระ</string>
    <string name="paid">ชำระแล้ว</string>
    <string name="owe">ค้างชำระ</string>
    <string name="setting_gps_title">ตั้งค่าตำแหน่ง</string>
    <string name="setting_gps_message">ตำแหน่งถูกปิดอยู่ คุณจำเป็นต้องเปิดใช้งานตำแหน่งก่อนใช้งาน แอพพลิเคชั่น</string>
    <string name="network_error_title">การเชื่อมต่อล้มเหลว</string>
    <string name="network_error_message">การเชื่อมต่อล้มเหลว กรุณาลองใหม่อีกครั้ง</string>
    <string name="network_disconnect">อินเตอร์เน็ตขาดการเชื่อมต่อ</string>
    <string name="try_again">ลองใหม่</string>
    <string name="dashboard_my_card">My Cards</string>
    <string name="dashboard_card_to_card">Card to Card</string>
    <string name="dashboard_loyalty">Loyalty</string>
    <string name="dashboard_ar">Game AR</string>
    <string name="dashboard_wallet">บัญชี</string>
    <string name="dashboard_mtf">โอนเงินผ่านธนาคาร แจ้งที่นี่!</string>
    <string name="dashboard_web_passport">Web Passport</string>
    <string name="dashboard_credit">Credit</string>
    <string name="dashboard_service">TopUp</string>
    <string name="dashboard_bill_pay">จ่ายบิล</string>
    <string name="dashboard_my_profile">My Profile</string>
    <string name="dashboard_settings">Settings</string>
    <string name="dashboard_time_line">Timeline</string>
    <string name="dashboard_vouchers">Vouchers</string>
    <string name="dashboard_my_qr">QR ของฉัน</string>
    <string name="dashboard_scan_qr">สแกน QR</string>
    <string name="dashboard_pin">ขายบัตรเงินสด</string>
    <string name="not_have_account">กรณียังไม่มีบัญชีผู้ใช้งาน กรุณา </string>
    <string name="sign_up">ลงทะเบียน</string>
    <string name="sign_in">เข้าสู่ระบบ</string>
    <string name="first_name">ชื่อ</string>
    <string name="title_name">คำนำหน้าชื่อ</string>
    <string name="last_name">นามสกุล</string>
    <string name="birth_day">วันเกิด</string>
    <string name="person_type">ประเภทบุคคล</string>
    <string name="attach_identity_card">แนบภาพบัตรประชาชน</string>
    <string name="create">สร้าง</string>
    <string name="already_have_account">คุณมีบัญชีผู้ใช้งานอยู่แล้ว</string>
    <string name="add_credit_agent">โอนเงินให้ Agent</string>
    <string name="support">ช่วยเหลือ</string>
    <string name="title_topup">เติมเงินมือถือ</string>
    <string name="title_mpay">ช่องทางโอนเงิน</string>
    <string name="title_report">Mobile Report</string>
    <string name="amount">ยอดเติม (บาท) :</string>
    <string name="amount_bill">ยอดชำระ (บาท) :</string>
    <string name="amount_bill_total">รวมยอดชำระ (บาท) :</string>
    <string name="ref1_bill_title">ข้อมูลชำระ :</string>
    <string name="fee">ค่าบริการ (บาท) :</string>
    <string name="debit">หักบัญชี (บาท) :</string>
    <string name="all_debit">รวมยอดหักบัญชี (บาท) :</string>
    <string name="paycode">Paycode :</string>
    <string name="carrier">เครือข่าย :</string>
    <string name="phone_num_second">หมายเลขโทรศัพท์มือถือ :</string>
    <string name="topup_second">เติมเงิน :</string>
    <string name="date">วันที่ :</string>
    <string name="status">สถานะ :</string>
    <string name="save_screenshot">บันทึกใบเสร็จ</string>
    <string name="spin_lucky">Spin Lucky Wheel</string>
    <string name="new_password">รหัสผ่านใหม่</string>
    <string name="new_password_again">ยืนยันรหัสผ่านใหม่</string>
    <string name="hint_create_password">*รหัสผ่านจำเป็นต้องมีอย่างน้อย 8 หลัก</string>
    <string name="password_not_same">ยืนยันรหัสผ่านไม่ถูกต้อง!!!</string>
    <string name="success">สำเร็จ</string>
    <string name="change_password_success">เปลี่ยนรหัสผ่านสำเร็จ</string>
    <string name="please_choice_topup">กรุณาเลือกจำนวนที่ท่านต้องการจะเติม</string>
    <string name="balance_not_enough">ยอดเงินคงเหลือของท่านไม่พอที่จะทำรายการ</string>
    <string name="register">ลงทะเบียน</string>
    <string name="register_done_title">ลงทะเบียนสำเร็จ</string>
    <string name="msg_progress">กรุณารอสักครู่...</string>
    <string name="please_phone_topup_error">หมายเลขโทรศัพท์ไม่ถูกต้อง</string>
    <string name="save_slip_success">บันทึก E-Slip สำเร็จ!!!</string>
    <string name="save_slip_fail">บันทึก E-Slip ล้มเหลว!!!</string>
    <string name="search">ค้นหา</string>
    <string name="search_form">ตั้งแต่</string>
    <string name="search_to">จนถึง</string>
    <string name="please_select">กรุณาเลือก</string>
    <string name="pay_code">หมายเลขการชำระ :</string>
    <string name="not_found_report">ไม่มี Report สำหรับวันนี้</string>
    <string name="alert_sure_connect_wifi">คุณกำลังใช้งานแอพพลิเคชั่นนี้ผ่าน wifi\nยืนยันการใช้งาน</string>
    <string name="hint_detail_my_qr">สามารถให้เอเจ้นท์ ท่านอื่นสแกนคิวอาร์โค้ด เพื่อรับ-ส่งข้อมูลได้</string>
    <string name="slip_not_found">ไม่พบใบเสร็จ</string>
    <string name="please_select_date">กรุณาเลือกวันที</string>
    <string name="duedate_title">กรุณาเลือกวันครบกำหนด</string>
    <string name="example">ตัวอย่าง</string>
    <string name="title_dialog_set_pin">คำแนะนำ</string>
    <string name="des_dialog_set_pin">หากท่านต้องการเข้าใช้งานเต็มเต็มได้สะดวกขึ้น แนะนำให้ท่านตั้งรหัส PIN 4 หลัก</string>
    <string name="not_show_again">ไม่ต้องแสดงอีก (สามารถเปลี่ยนแปลงภายหลังที่เมนู \"ตั้งค่า\")</string>
    <string name="be_later">ไว้ภายหลัง</string>
    <string name="short_setting">ตั้งค่า</string>
    <string name="title_setup_pin">ตั้งค่ารหัส PIN</string>
    <string name="menu_setup_fingerprint">ตั้งค่ารหัสลายนิ้วมือ</string>
    <string name="chat_news">ข่าวสาร Promotion</string>
    <string name="chat_manual">คู่มือการใช้งาน</string>
    <string name="chat_bye">บ๊ายบาย</string>
    <string name="chat_how_to_transfer_money_to_bank">วิธีแจ้งโอนเงินผ่านธนาคาร</string>
    <string name="chat_how_to_transfer_money_to_account">สอบถามวิธีโอนเงินเข้าบัญชีเติมเต็ม</string>
    <string name="chat_register_account">สมัครตัวแทน</string>
    <string name="full_name">ชื่อ - นามสกุล</string>
    <string name="chat_id_card_image">ภาพบัตรประจำตัวประชาชน</string>
</resources>