<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Title"
        android:padding="@dimen/activity_small_space"
        android:text="@string/title_dialog_set_pin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/my_text_size"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:text="@string/des_dialog_set_pin"/>
    <CheckBox
        android:id="@+id/checkbox_ignor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_show_again"
        android:padding="@dimen/activity_small_space"
        android:buttonTint="@android:color/secondary_text_dark"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="10sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/be_later"
            android:textStyle="bold"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/colorAccent"/>
        <Button
            android:id="@+id/btn_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/short_setting"
            android:textStyle="bold"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/colorPrimary"/>
    </LinearLayout>

</LinearLayout>