<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/btn_transfer_bank"
        android:text="@string/chat_how_to_transfer_money_to_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_chat_bot"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/btn_transfer_account"
        android:text="@string/chat_how_to_transfer_money_to_account"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_chat_bot"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/btn_news"
        android:text="@string/chat_news"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_chat_bot"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/btn_register"
        android:text="@string/chat_register_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_chat_bot"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/btn_manual"
        android:text="@string/chat_manual"
        android:visibility="gone"
        android:background="@drawable/btn_chat_bot"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/btn_bye"
        android:text="@string/chat_bye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_chat_bot"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>


</LinearLayout>