<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_data"
            android:layout_marginTop="@dimen/activity_space"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_space"
            android:hint="@string/name"
            android:textColorHint="@android:color/secondary_text_dark_nodisable"
            android:background="@android:drawable/edit_text" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_space"
            android:hint="@string/phone_number"
            android:textColorHint="@android:color/secondary_text_dark_nodisable"
            android:background="@android:drawable/edit_text"
            android:inputType="phone" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_space"
            android:hint="@string/identity_number"
            android:textColorHint="@android:color/secondary_text_dark_nodisable"
            android:background="@android:drawable/edit_text"
            android:inputType="number"
            android:maxEms="13"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:background="@drawable/ripple_button" />


    </LinearLayout>
</LinearLayout>