<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_form"/>
    <Button
        android:id="@+id/btn_date_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_bg_card"
        android:textStyle="bold"
        android:text="@string/please_select"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_space"
        android:text="@string/search_to"/>
    <Button
        android:id="@+id/btn_date_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed"
        android:textStyle="bold"
        android:text="@string/please_select"

        />
</LinearLayout>